--- a/qdrant-landing/themes/qdrant/layouts/blog/single.html
+++ b/qdrant-landing/themes/qdrant/layouts/blog/single.html
@@ -19,7 +19,7 @@
                 <span>{{ .Params.author }}</span>
             </div>
             <div class="qb-post__img">
-                <img class="img-fluid" src="{{ .Params.preview_image | safeHTML }}" alt="{{ .Params.title }}">
+                {{ partial "preview-image" (dict "context" . "default_file_name" "title.jpg" "preview_file" .Params.title_preview_image) }}
             </div>
             <div class="d-md-flex">
                 <section class="qb-post__share qb-share">
@@ -104,7 +104,7 @@
         <a href="{{ $link }}" class="qb-card qb-card_mobile-compact col-12 col-md-4">
             {{ if .Params.preview_image }}
             <div class="qb-card__img">
-                <img src="{{ .Params.preview_image | safeHTML }}" alt="{{ .Params.title }}">
+                {{ partial "preview-image" (dict "context" . "default_file_name" "preview.jpg" "preview_file" .Params.small_preview_image) }}
             </div>
             {{ end }}
             <h3 class="qb-card__title">{{ .Params.title }}</h3>
