fix breadcrums on the article page

--- a/qdrant-landing/themes/qdrant/static/css/blocks/_article.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_article.scss
@@ -99,7 +99,7 @@ article aside[role="status"]:before {
   //  margin-left: 0;
   //}
   //
-  & > ul, & > ol {
+  & > ul:not(.breadcrumbs), & > ol {
     margin-left: lib.rem(24);
   }
   //
