--- a/qdrant-landing/themes/qdrant/layouts/blog/single.html
+++ b/qdrant-landing/themes/qdrant/layouts/blog/single.html
@@ -1,6 +1,6 @@
 {{ .Scratch.Set "classes" "qdrant-blog__header" }}
 {{ partial "header" . }}
-<div class="qdrant-blog__post auto-container" xmlns="http://www.w3.org/1999/html">
+<div class="qdrant-blog__post auto-container">
     <section class="row clearfix mt-md-5 pt-md-5">
         <nav class="col-12">
             {{ partial "breadcrumbs" . }}
