changed blog search to using blog index

--- a/qdrant-landing/themes/qdrant/layouts/partials/js.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/js.html
@@ -62,7 +62,7 @@
     }
 
     if (/blog\/?$/.test(window.location?.pathname)) {
-      window.initQdrantSearch({searchApiUrl: 'https://search.qdrant.tech/api/search', section: "articles"}); <!-- todo: change to "blog" -->
+      window.initQdrantSearch({searchApiUrl: 'https://search.qdrant.tech/api/search', section: "blog"});
     }
   });
 </script>
