--- a/qdrant-landing/themes/qdrant/layouts/benchmarks/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/benchmarks/list.html
@@ -2,6 +2,9 @@
 
 {{ range $i,$p := where .Data.Pages "Section" "benchmarks" }}
 
+{{ if .Params.Unlisted }}
+
+{{ else }}
 
 <div class="auto-container pt-3 pt-md-5 single-page">
     <div class="row clearfix">
@@ -17,15 +20,17 @@
             {{ if .Description }}
             <article class="article article_benchmarks article_narrow">
                 <h1>{{ .Title }}</h1>
-                <p>{{ .Description }}</p>
+                <p>{{ .Description | safeHTML }}</p>
             </article>
             {{ end }}
 
-
-            {{ if .Params.data }}
+            {{ if .Params.single_node_data }}
             <div class="row clearfix">
                 <section class="content-side col-lg-12 col-md-12 col-sm-12">
-                    {{ partial "benchmark_chart" . }}
+                    {{
+                        partial "benchmark_chart"
+                        (dict "Params" (dict "id" 1 "metric" "rps" "data" .Params.single_node_data))
+                    }}
                 </section>
             </div>
             {{ end }}
@@ -46,6 +51,6 @@
     </div>
 </div>
 
-
+{{ end }}
 {{ end }}
 {{ end }}
