--- a/qdrant-landing/themes/qdrant/layouts/benchmarks/single.html
+++ b/qdrant-landing/themes/qdrant/layouts/benchmarks/single.html
@@ -1,11 +1,13 @@
 {{ define "main" }}
 
-
-{{ if .Params.data }}
+{{ if .Params.single_node_data }}
     <div class="auto-container pt-3 pt-md-5 single-page">
         <div class="row clearfix">
             <section class="content-side col-lg-12 col-md-12 col-sm-12">
-                {{ partial "benchmark_chart" . }}
+                {{
+                    partial "benchmark_chart"
+                    (dict "Params" (dict "id" 1 "metric" "rps" "data" .Params.single_node_data))
+                }}
             </section>
         </div>
     </div>
