--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -176,6 +176,7 @@ blockquote {
 @import "blocks/blog";
 @import "blocks/qdrant-blog";
 @import "blocks/article-card";
+@import "blocks/marketing-landing";
 @import "blocks/breadcrumbs";
 @import "blocks/share-post";
 @import "blocks/table_of_content";
