--- a/qdrant-landing/themes/qdrant/layouts/partials/marquee.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/marquee.html
@@ -1,5 +1,5 @@
 {{$marqueeClass := .marqueeClass}}
-<div class="{{ $marqueeClass }} mt-3 mb-5">
+<div class="{{ $marqueeClass }}">
     <div class="{{ $marqueeClass }}__container">
         <div class="{{ $marqueeClass }}__block">
             <div class="{{ $marqueeClass }}__inner {{ $marqueeClass }}__inner_to-left">
