--- a/qdrant-landing/themes/qdrant/layouts/marketing/single.html
+++ b/qdrant-landing/themes/qdrant/layouts/marketing/single.html
@@ -93,7 +93,8 @@
 {{ $banner := .Params.bannerSection }}
 <section class="row">
     <div class="col-12 ml-banner">
-        <div class="ml-banner__banner" style="background-image: url('{{ $banner.image }}')">
+        <div class="ml-banner__banner"
+             style="background-image: url('{{ $banner.image }}') {{ if $banner.bgImage }}, url('{{ $banner.bgImage }}'){{ end }}">
             <div class="ml-banner__content">
                 <h2 class="ml-banner__title">{{ $banner.title | safeHTML }}</h2>
                 <a class="ml-button ml-banner__button" href="{{ $banner.button.link }}">
