--- a/qdrant-landing/themes/qdrant/layouts/marketing/single.html
+++ b/qdrant-landing/themes/qdrant/layouts/marketing/single.html
@@ -4,10 +4,10 @@
 {{ if .Params.heroSection }}
 {{ $heroSection := .Params.heroSection }}
 <section class="row ml-hero">
-    <div class="col-12 col-md-5 d-md-none d-flex justify-content-center">
+    <div class="col-12 col-md-6 col-lg-5 d-md-none d-flex justify-content-center">
         <div class="ml-hero__logo">{{ partial "logo.html" . }}</div>
     </div>
-    <div class="col-12 col-md-5 order-1 order-md-0">
+    <div class="col-12 col-md-6 col-lg-5 order-1 order-md-0">
         <div class="ml-hero__logo d-none d-md-block">{{ partial "logo.html" . }}</div>
         <h1 class="ml-hero__title">{{ $heroSection.title | safeHTML }}</h1>
         <p class="ml-hero__description">{{ $heroSection.description | safeHTML }}</p>
@@ -21,7 +21,7 @@
         </div>
     </div>
 
-    <div class="col-12 col-md-7 order-0 order-md-1">
+    <div class="col-12 col-md-6 col-lg-7 order-0 order-md-1">
         <figure class="ml-hero__image">
             <img src="{{ $heroSection.image }}" alt="{{ $heroSection.title | plainify }}">
         </figure>
